--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 
-    <div id="testo">
-        
+    <div class="box">
+        <div class="box-inner">
+            La password generata è: 
+            <textarea readonly id="testo"></textarea>
+            <div>
+                <button onclick="copia('testo')">copia</button>
+            </div>
+        </div>
     </div>
-    
+
     <script src="script/script.js"></script>
 </body>
 </html>
